--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -79,3 +79,120 @@
 .navbar-profile:hover .dropdown {
   display: block;
 }
+
+.nav-dark {
+  background: #141414;
+}
+
+@media (max-width: 800px) {
+  .navbar {
+    padding: 20px 4%;
+  }
+  .navbar-left ul {
+    display: none;
+  }
+  .navbar img {
+    height: 25px;
+  }
+}
+
+@media (max-width: 500px) {
+  .navbar img {
+    height: 20px;
+  }
+  .navbar-right {
+    gap: 10px;
+  }
+}
+
+/* Responsive Styles */
+/* @media (max-width: 768px) {
+  .navbar {
+    padding: 15px 4%;
+    font-size: 12px;
+  }
+
+  .navbar-left {
+    gap: 20px;
+  }
+
+  .navbar-left img {
+    width: 70px;
+  }
+
+  .navbar-left ul {
+    gap: 10px;
+  }
+
+  .navbar-right {
+    gap: 15px;
+  }
+
+  .navbar-right .icons {
+    width: 18px;
+  }
+
+  .navbar-right .profile {
+    width: 30px;
+  }
+
+  .navbar-profile {
+    gap: 5px;
+  }
+
+  .navbar .dropdown {
+    width: 100%;
+    right: 0;
+    left: 0;
+    padding: 10px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar {
+    padding: 10px 2%;
+    font-size: 10px;
+  }
+
+  .navbar-left {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .navbar-left img {
+    width: 50px;
+  }
+
+  .navbar-left ul {
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .navbar-right {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+  }
+
+  .navbar-right .icons {
+    width: 16px;
+  }
+
+  .navbar-right .profile {
+    width: 25px;
+  }
+
+  .navbar-profile {
+    gap: 3px;
+  }
+
+  .navbar .dropdown {
+    width: 100%;
+    right: 0;
+    left: 0;
+    padding: 5px;
+    text-align: left;
+  }
+} */
