--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -34,6 +34,7 @@
   border-radius: 4px;
   padding: 16px 20px;
   font-size: 16px;
+
   font-weight: 500;
 }
 
@@ -85,4 +86,25 @@
   color: #fff;
   font-weight: 500;
   cursor: pointer;
+}
+
+.login-spinner {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login-spinner img {
+  width: 60px;
+}
+
+@media (max-width: 500px) {
+  .login {
+    padding: 15px 5%;
+  }
+  .login-form {
+    padding: 20px;
+    margin-top: 30px;
+  }
 }
